--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "id": "c63de499-44c3-4e9c-94bc-31824145af6e",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "requiredApiVersion": "^1.7.2",
     "iconFile": "icon.png",
     "author": {
@@ -8,8 +8,8 @@
         "homepage": "https://rocketbooster.net",
         "support": "https://github.com/wreiske/Rocket.Chat.App-QRCode/issues"
     },
-    "name": "QRCode",
-    "nameSlug": "qrcode",
+    "name": "QR Code Generator",
+    "nameSlug": "qr-code-generator",
     "classFile": "QRCodeApp.ts",
     "description": "Generate QR Codes directly in Rocket.Chat conversations"
 }
